# simulate-sign-spotting-sparse-retrieval

./: .gitignore  README.md  pyproject.toml  simulate_sign_spotter.py  wandb_run.py  wandb_sweep.py
simulate_sign_spotting_sparse_retrieval/: Convert_Phoenix_2014_to_jsonl_for_sign_spotting_retrieval.ipynb  phoenix_vocab.ipynb  simulate_sign_spotter.py  st_bm25_explorer.py  st_explorer_relevance_override.py  wandb_run.py
simulate_sign_spotting_sparse_retrieval/test_data/: phoenix2014_multisigner_segment_transcripts.jsonl  phoenix2014_multisigner_video_transcripts.jsonl
